# StringArt-AI

./: .env  .gitignore  README.md  pyproject.toml
checkpoints/: best_gan_checkpoint.pth  best_unet_checkpoint.pth
docs/: readme.md
docs/readmes/: 01_data_pipeline.md  02_unet_model.md  03_gan_unet_model.md
notebooks/: gan-u-net.ipynb  gan-vs-u-net-comparative-analysis.ipynb  stringart-dataloader-example.ipynb  stringart-gan-u-net.ipynb  u-net.ipynb
stringart-ai/: main.py
stringart-ai/data_scripts/: __init__.py
stringart_ai/: config.py
stringart_ai/analysis/: compare_unet_gan.py
stringart_ai/data_scripts/: data_loader.py  stringart_labeler.py  stringart_sketch_subset.py
stringart_ai/models/: gan_unet.py  trainer.py  u_net.py
stringart_ai/utils/: image.py  loss.py  training_tools.py
